--- a/css/styles.css
+++ b/css/styles.css
@@ -64,12 +64,13 @@ body {
 
 .player {
     display: flex;
-    min-height: 100vh;
+    height: 100vh;
 }
 
 @media only screen and (max-width: 768px) {
     .player {
         display: block;
+        height: auto;
     }
 }
 
@@ -114,6 +115,12 @@ body {
     height: 100%;
     overflow: scroll;
     overflow-x: hidden;
+}
+
+@media only screen and (max-width: 768px) {
+    .playlist {
+        overflow: auto;
+    }
 }
 
 .playlist__song {
